Fixed toggle switch button color (and rules alignement)

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -901,15 +901,15 @@ body.dark-mode .rcx-tag--secondary {
 }
 
 body.dark-mode .rcx-table__cell--align-end {
-  color: var(--info-font-color) !important;
+	color: var(--info-font-color) !important;
 	background-color: var(--color-dark-medium) !important;
 }
 
 /* Apply info (white) font *everywhere* */
 body.dark-mode .rcx-css-ps0pgs, /* Channel name */
-body.dark-mode .rcx-room-header  .rcx-box:not(.rcx-button-group):not(.rcx-button):not(.rcx-css-1fgkscl):not(.rcx-css-4pvxx3), /* omit buttons/icons (.rcx-css-1fgkscl is .rcx-icon parent) */
-body.dark-mode .rcx-vertical-bar .rcx-box:not(.rcx-button-group):not(.rcx-button):not(.rcx-css-1fgkscl):not(.rcx-css-4pvxx3):not(.rcx-css-trljwa) {
-  color: var(--info-font-color) !important;
+body.dark-mode .rcx-room-header  .rcx-box:not(.rcx-button-group):not(.rcx-button):not(.rcx-css-1fgkscl):not(.rcx-css-4pvxx3):not(.rcx-toggle-switch__input):not(.rcx-toggle-switch__fake), /* omit buttons/icons (.rcx-css-1fgkscl is .rcx-icon parent) */
+body.dark-mode .rcx-vertical-bar .rcx-box:not(.rcx-button-group):not(.rcx-button):not(.rcx-css-1fgkscl):not(.rcx-css-4pvxx3):not(.rcx-toggle-switch__input):not(.rcx-toggle-switch__fake):not(.rcx-css-trljwa) {
+	color: var(--info-font-color) !important;
 	/*background-color: var(--color-darkest) !important;*/
 }
 
@@ -923,8 +923,8 @@ body.dark-mode .rcx-vertical-bar .rcx-box:not(.rcx-button-group):not(.rcx-button
 } */
 
 body.dark-mode .rcx-table__cell--align-start {
-  color: var(--info-font-color) !important;
-  background-color: var(--color-dark-medium) !important;
+	color: var(--info-font-color) !important;
+  	background-color: var(--color-dark-medium) !important;
 }
 
 body.dark-mode  .rcx-field__description code {
